tekton/pipeline-java/eventlistener-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-eventlistener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: my-app.tekton-el.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-my-app-eventlistener
                port:
                  number: 8080
